Fix "word-wrap" invalid property value.
Possible, that's why was confilicts with #1079 in #1081 merge.

--- a/source/css/_common/components/highlight/highlight.styl
+++ b/source/css/_common/components/highlight/highlight.styl
@@ -18,7 +18,7 @@ pre, code { font-family: $code-font-family; }
 
 code {
   padding: 2px 4px;
-  word-wrap: break-all;
+  word-wrap: break-word;
   color: $highlight-foreground;
   background: $highlight-background;
   border-radius: $code-border-radius;
